--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,8 +16,8 @@
         android:layout_marginEnd="8dp"
         android:autofillHints=""
         android:ems="10"
+        android:hint="@string/usernameHint"
         android:inputType="textPersonName"
-        android:text="@string/email_txt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,8 +28,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:ems="10"
+        android:hint="@string/passwordHint"
         android:inputType="textPersonName"
-        android:text="Password"
         app:layout_constraintEnd_toEndOf="@+id/editText3"
         app:layout_constraintStart_toStartOf="@+id/editText3"
         app:layout_constraintTop_toBottomOf="@+id/editText3" />
@@ -39,9 +39,8 @@
         android:layout_width="163dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
-        android:background="@android:drawable/alert_dark_frame"
         android:backgroundTint="@color/colorAccent"
-        android:text="Button"
+        android:text="Log in"
         app:layout_constraintEnd_toEndOf="@+id/editText4"
         app:layout_constraintStart_toStartOf="@+id/editText4"
         app:layout_constraintTop_toBottomOf="@+id/editText4" />
