--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,31 +40,25 @@
         android:layout_width="163dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/rounded_button"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="@+id/passowrdTxt"
         app:layout_constraintStart_toStartOf="@+id/passowrdTxt"
         app:layout_constraintTop_toBottomOf="@+id/passowrdTxt" />
 
-    <TextView
+    <Button
         android:id="@+id/registerBtn"
-        android:layout_width="142dp"
-        android:layout_height="25dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/register"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintStart_toStartOf="@+id/loginBtn"
-        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
-
-    <TextView
-        android:id="@+id/forgotBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/forgotPW"
-        android:textColor="@color/colorAccent"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="220dp"
+        android:layout_marginBottom="280dp"
+        android:background="@drawable/rounded_button"
+        android:backgroundTint="@color/colorAccent"
+        android:text="@string/register"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/loginBtn"
-        app:layout_constraintTop_toBottomOf="@+id/registerBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 </android.support.constraint.ConstraintLayout>
