--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,7 +40,7 @@
         android:layout_width="163dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/appointments_button"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="@+id/passowrdTxt"
@@ -54,7 +54,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginEnd="220dp"
         android:layout_marginBottom="280dp"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/appointments_button"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/register"
         app:layout_constraintBottom_toBottomOf="parent"
