--- a/app/src/main/res/layout/activity_manager_landing.xml
+++ b/app/src/main/res/layout/activity_manager_landing.xml
@@ -4,28 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFF">
+    android:background="#74B3CE">
 
     <Button
         android:id="@+id/clientsBtn"
         android:layout_width="322dp"
         android:layout_height="87dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/rounded_button"
-        android:backgroundTint="#ABEBD2"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/clients_button"
+        android:drawableStart="@drawable/ic_person_black_24dp"
         android:text="@string/Clients"
         app:layout_constraintBottom_toTopOf="@+id/settingsBtn"
         app:layout_constraintEnd_toEndOf="@+id/employeesBtn"
-        app:layout_constraintStart_toStartOf="@+id/employeesBtn" />
+        app:layout_constraintStart_toStartOf="@+id/employeesBtn"
+        app:layout_constraintTop_toBottomOf="@+id/employeesBtn" />
 
     <Button
         android:id="@+id/appointmentsBtn"
         android:layout_width="322dp"
-        android:layout_height="374dp"
-        android:background="@drawable/rounded_button"
-        android:backgroundTint="#ABEBD2"
+        android:layout_height="87dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="600dp"
+        android:background="@drawable/appointments_button"
+        android:drawableStart="@drawable/ic_web_black_24dp"
         android:text="@string/Appointments"
-        app:layout_constraintBottom_toTopOf="@+id/employeesBtn"
+        app:layout_constraintBottom_toBottomOf="@+id/settingsBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,24 +38,25 @@
         android:id="@+id/employeesBtn"
         android:layout_width="322dp"
         android:layout_height="87dp"
-        android:layout_marginBottom="25dp"
-        android:background="@drawable/rounded_button"
-        android:backgroundTint="#ABEBD2"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/employees_button"
+        android:drawableStart="@drawable/ic_supervisor_account_black_24dp"
         android:text="@string/Employees"
-        app:layout_constraintBottom_toTopOf="@+id/clientsBtn"
         app:layout_constraintEnd_toEndOf="@+id/appointmentsBtn"
-        app:layout_constraintStart_toStartOf="@+id/appointmentsBtn" />
+        app:layout_constraintStart_toStartOf="@+id/appointmentsBtn"
+        app:layout_constraintTop_toBottomOf="@+id/appointmentsBtn" />
 
     <Button
         android:id="@+id/settingsBtn"
         android:layout_width="322dp"
         android:layout_height="87dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/rounded_button"
-        android:backgroundTint="#ABEBD2"
+        android:layout_marginBottom="56dp"
+        android:background="@drawable/settings_button"
+        android:drawableStart="@drawable/ic_build_black_24dp"
         android:text="@string/Settings"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/clientsBtn"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/clientsBtn" />
 
 </android.support.constraint.ConstraintLayout>
