- Font Colors fixed - Register button better aligned in login_activirty. - Address field in activity_register2 fixed.

--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -141,7 +141,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/addressHint"
-        android:inputType="date"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="@+id/registerDoB"
         app:layout_constraintTop_toBottomOf="@+id/registerDoB" />
 
