--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,7 @@
         android:background="@drawable/appointments_button"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/login"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="@+id/passowrdTxt"
         app:layout_constraintStart_toStartOf="@+id/passowrdTxt"
         app:layout_constraintTop_toBottomOf="@+id/passowrdTxt" />
@@ -57,8 +58,11 @@
         android:background="@drawable/appointments_button"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/register"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.759"
         app:layout_constraintStart_toStartOf="@+id/loginBtn"
-        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
+        app:layout_constraintVertical_bias="0.211" />
 </android.support.constraint.ConstraintLayout>
