--- a/app/src/main/res/layout/activity_register1.xml
+++ b/app/src/main/res/layout/activity_register1.xml
@@ -1,114 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/loginbg"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/registerUsernameTxt"
-        android:layout_width="206dp"
+        android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="192dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="75dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/usernameHint"
-        android:inputType="textPersonName"
-        app:layout_constraintBottom_toBottomOf="@+id/enterUsernameLbl"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/registerPasswordTxt"
-        android:layout_width="208dp"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/registerUsernameTxt"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
         android:layout_height="42dp"
         android:layout_marginTop="32dp"
+        android:layout_marginEnd="75dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/passwordHint"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/registerUsernameTxt"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/registerUsernameTxt"
-        app:layout_constraintTop_toBottomOf="@+id/registerUsernameTxt" />
+        android:inputType="textPassword" />
 
     <EditText
         android:id="@+id/confirmPasswordTxt"
-        android:layout_width="208dp"
+        android:layout_below="@+id/registerPasswordTxt"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
         android:layout_height="42dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="75dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/confirmPasswordHint"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
-        app:layout_constraintStart_toStartOf="@+id/registerPasswordTxt"
-        app:layout_constraintTop_toBottomOf="@+id/registerPasswordTxt" />
+        android:inputType="textPassword" />
 
     <TextView
         android:id="@+id/enterUsernameLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="200dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="15dp"
+        android:layout_toStartOf="@+id/registerUsernameTxt"
         android:text="@string/registerUsername"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/registerUsernameTxt"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/enterPasswordLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/enterUsernameLbl"
+        android:layout_marginStart="0dp"
         android:layout_marginTop="50dp"
+        android:layout_marginEnd="15dp"
+        android:layout_toStartOf="@+id/registerPasswordTxt"
         android:text="@string/registerPassword"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/enterUsernameLbl"
-        app:layout_constraintTop_toBottomOf="@+id/enterUsernameLbl" />
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/confirmPasswordLbl"
+        android:id="@+id/enterPassword2Lbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:text="@string/confirmPassword"
+        android:layout_below="@id/enterPasswordLbl"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="15dp"
+        android:layout_toStartOf="@+id/confirmPasswordTxt"
+        android:text="@string/registerPassword"
         android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/returnBtn"
-        app:layout_constraintEnd_toStartOf="@+id/confirmPasswordTxt"
-        app:layout_constraintStart_toStartOf="@+id/enterPasswordLbl"
-        app:layout_constraintTop_toBottomOf="@+id/enterPasswordLbl" />
-
-    <Button
-        android:id="@+id/nextBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="52dp"
-        android:layout_marginBottom="252dp"
-        android:backgroundTint="@color/colorAccent"
-        android:text="@string/nextBtn"
-        android:textAllCaps="false"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textStyle="bold" />
 
 
     <Button
         android:id="@+id/returnBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginBottom="252dp"
+        android:layout_width="110dp"
+        android:layout_height="105dp"
+        android:layout_alignEnd="@+id/enterPassword2Lbl"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginEnd="-50dp"
+        android:layout_marginBottom="204dp"
         android:backgroundTint="@color/colorAccent"
         android:text="@string/returnBtn"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textAllCaps="false"
+        android:textColor="@android:color/white" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/nextBtn"
+        android:layout_width="110dp"
+        android:layout_height="105dp"
+        android:layout_alignEnd="@+id/confirmPasswordTxt"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginEnd="-22dp"
+        android:layout_marginBottom="208dp"
+        android:backgroundTint="@color/colorAccent"
+        android:text="@string/nextBtn"
+        android:textColor="#FFFFFF" />
+
+</RelativeLayout>
